src/test/deca/syntax/invalid/float_too_large.deca
// Description:
//    Programme testant la déclaration d'un float non codable sur 32 bits.
//
// Resultats:
//    a==2
//
// Historique:
//    cree le 19/12/2024

{   
    float a = 1.23E39;
}

